# rust-emojicons

./: Cargo.toml  build.rs
src/: lib.rs
