[package]

name = "emojicons"
version = "1.0.0"
authors = ["Jiří Šebele <sindriava@gmail.com>"]

description = "Parse :emoji: notation to unicode representation."
repository = "https://github.com/jiri/rust-emojicons"
readme = "README.md"
license = "MIT"

build = "build.rs"

[build-dependencies]
phf_codegen = "0.7.23"

[dependencies]
phf = "0.7.23"
regex = "1.1" # pattern matching and subs
lazy_static = "1.2" # regex pattern compilation
